releases/v1/latest/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "instanceType": {
      "type": "string",
      "defaultValue": "Standard_B2als_v2",
      "minLength": 1,
      "metadata": {
        "description": "Azure instance type, see https://learn.microsoft.com/en-us/azure/virtual-machines/sizes."
      }
    },
    "existingVnetResourceID": {
      "defaultValue": "",
      "type": "string",
      "metadata": {
        "description": "Use this optional parameter to specify the Resource ID of an existing virtual network to deploy your server into. If this value is not specified, a new Virtual Network will be created for the Virtual Machine."
      }
    },
    "existingSubnetName": {
      "defaultValue": "",
      "type": "string",
      "metadata": {
        "description": "Use this optional parameter to specify the name of an existing subnet within your virtual network to deploy your server into. This value must be specified if an existing Virtual Network is being used."
      }
    },
    "createPublicIPAddress": {
      "type": "string",
      "defaultValue": "No",
      "allowedValues": [
        "Yes",
        "No"
      ],
      "metadata": {
        "description": "Choose whether to create a public IP address for the VM."
      }
    },
    "clientIPAddressList": {
      "type": "string",
      "defaultValue": "",
      "minLength": 7,
      "metadata": {
        "description": "A list of comma separated IP address ranges that can be used to access the license manager. These must be valid IP CIDR ranges of the form x.x.x.x/x. Use the value &lt;your_client_ip_address&gt;/32 to restrict access to only your computer."
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "manager",
      "minLength": 1,
      "maxLength": 64,
      "metadata": {
        "description": "Admin username, this is used to login to the Network License Manager for MATLAB dashboard. To avoid any deployment errors, check the list of [disallowed values](https://docs.microsoft.com/en-us/rest/api/compute/virtual-machines/create-or-update?tabs=HTTP#osprofile) for adminUsername."
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Admin password for the chosen username. This is used to login to the Network License Manager for MATLAB dashboard. For the deployment to succeed, your password must meet [Azure's password requirements](https://docs.microsoft.com/en-us/azure/virtual-machines/linux/faq#what-are-the-password-requirements-when-creating-a-vm-)."
      }
    },
    "imageID": {
      "type": "String",
      "defaultValue": "",
      "metadata": {
        "description": "Optional Resource ID of a custom managed image in the target region. Leave this field empty to use a prebuilt MathWorks image instead. Customizing the build, such as removing or modifying included scripts, may make the image incompatible with the provided ARM template. Modify the ARM template and/ or image accordingly to restore compatibility."
      }
    },
    "useUniqueServerName": {
      "type": "string",
      "defaultValue": "No",
      "allowedValues": [
        "Yes",
        "No"
      ],
      "metadata": {
        "description": "Choose whether to give the Network License Manager VM a hostname that is unique to this deployment. Select No to use the fixed hostname netlm-server. Select Yes to append a string derived from the resource group to the hostname, which avoids name resolution failures when you deploy more than one license manager into the same virtual network."
      }
    }
  },
  "variables": {
    "namingPrefix": "netlm",
    "addressPrefix": [
      "10.0.0.0/16"
    ],
    "subnetPrefix": "10.0.0.0/24",
    "createNewVirtualNetwork": "[if(empty(parameters('existingVnetResourceID')), bool('true'), bool('false'))]",
    "virtualNetworkCreateName": "[concat(variables('namingPrefix'), '-vnet')]",
    "subnetCreateName": "[concat(variables('namingPrefix'), '-subnet')]",
    "virtualNetworkName": "[if(variables('createNewVirtualNetwork'),variables('virtualNetworkCreateName'),last(split(parameters('existingVnetResourceID'),'/')))]",
    "subnetName": "[if(variables('createNewVirtualNetwork'),variables('subnetCreateName'),parameters('existingSubnetName'))]",
    "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName'))]",
    "subnetId": "[if(variables('createNewVirtualNetwork'),variables('subnetRef'),concat(parameters('existingVnetResourceID'), '/subnets/', parameters('existingSubnetName')))]",
    "location": "[resourceGroup().location]",
    "resourceGroupUniqueString": "[uniqueString(resourceGroup().id)]",
    "linuxVMNameLengthLimit": 64,
    "useUniqueServerName": "[equals(parameters('useUniqueServerName'), 'Yes')]",
    "fixedServerMachineName": "[concat(take(variables('namingPrefix'), 8), '-server')]",
    "uniqueServerMachineName": "[take(concat(variables('namingPrefix'), variables('resourceGroupUniqueString')), variables('linuxVMNameLengthLimit'))]",
    "serverMachineName": "[if(variables('useUniqueServerName'), variables('uniqueServerMachineName'), variables('fixedServerMachineName'))]",
    "serverIPName": "[concat(variables('serverMachineName'), '-ip')]",
    "createPublicIPAddress": "[if(equals(parameters('createPublicIPAddress'), 'Yes'), bool('true'), bool('false'))]",
    "domainNameLabel": "[if(variables('useUniqueServerName'), concat(variables('namingPrefix'), '-azure-', variables('resourceGroupUniqueString')), concat(variables('fixedServerMachineName'), '-azure-', variables('resourceGroupUniqueString')))]",
    "publicIpTimeout": "20",
    "networkSecurityGroupName": "[concat(variables('namingPrefix'), '-nsg')]",
    "serverNICName": "[concat(variables('serverMachineName'), '-nic')]",
    "serverIPConfigName": "[concat(variables('serverMachineName'), '-ipconfig')]",
    "storageAccountApiVersion": "2023-05-01",
    "scriptPath": "/opt/mathworks/license-manager/",
    "startScript": "setup_machine.sh",
    "scriptExe": "[concat(variables('scriptPath'), variables('startScript'))]",
    "runScript": "[concat('bash ', variables('scriptExe'))]",
    "adminUsername": "[parameters('adminUsername')]",
    "scriptArguments": "[concat(' ', variables('adminUsername'))]",
    "setupCommand": "[concat(variables('runScript'), variables('scriptArguments'))]",
    "nicIpConfigurationWithPublicIP": [
      {
        "name": "[variables('serverIPConfigName')]",
        "properties": {
          "subnet": {
            "id": "[variables('subnetId')]"
          },
          "privateIPAllocationMethod": "Dynamic",
          "publicIpAddress": {
            "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('serverIPName'))]"
          }
        }
      }
    ],
    "nicIpConfigurationWithoutPublicIP": [
      {
        "name": "[variables('serverIPConfigName')]",
        "properties": {
          "subnet": {
            "id": "[variables('subnetId')]"
          },
          "privateIPAllocationMethod": "Dynamic"
        }
      }
    ],
    "publisher": "mathworks-inc",
    "offer": "license-manager-ref-arch-linux",
    "sku": "license-manager-ref-arch-linux-sku-r2026b",
    "version": "20262.0.1159035",
    "imageReference": {
      "publisher": "[variables('publisher')]",
      "offer": "[variables('offer')]",
      "sku": "[variables('sku')]",
      "version": "[variables('version')]"
    },
    "plan": {
      "name": "[variables('sku')]",
      "publisher": "[variables('publisher')]",
      "product": "[variables('offer')]"
    },
    "imageResourceID": {
      "id": "[parameters('imageID')]"
    }
  },
  "resources": [
    {
      "name": "[variables('virtualNetworkName')]",
      "type": "Microsoft.Network/virtualNetworks",
      "condition": "[variables('createNewVirtualNetwork')]",
      "apiVersion": "2024-05-01",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": "[variables('addressPrefix')]"
        },
        "subnets": [
          {
            "name": "[variables('subnetCreateName')]",
            "properties": {
              "addressPrefix": "[variables('subnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('serverIPName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "sku": {
        "name": "Standard"
      },
      "condition": "[variables('createPublicIPAddress')]",
      "apiVersion": "2024-05-01",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[variables('domainNameLabel')]"
        },
        "idleTimeoutInMinutes": "[variables('publicIpTimeout')]"
      }
    },
    {
      "name": "[variables('networkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-05-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]"
      ],
      "properties": {
        "securityRules": [
          {
            "name": "allow-https",
            "properties": {
              "priority": 1010,
              "sourceAddressPrefixes": "[split(replace(parameters('clientIPAddressList'),' ', ''), ',')]",
              "protocol": "Tcp",
              "destinationPortRange": "443",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "allow-netlm",
            "properties": {
              "priority": 1020,
              "sourceAddressPrefixes": "[split(replace(parameters('clientIPAddressList'),' ', ''), ',')]",
              "protocol": "Tcp",
              "destinationPortRange": "27000-27010",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "allow-internal-traffic",
            "properties": {
              "priority": 1030,
              "sourceAddressPrefix": "VirtualNetwork",
              "protocol": "Tcp",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork"
            }
          },
          {
            "name": "allow-ssh",
            "properties": {
              "description": "allow-ssh",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefixes": "[split(replace(parameters('clientIPAddressList'),' ', ''), ',')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1040,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('serverNICName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2024-05-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses/', variables('serverIPName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
      ],
      "properties": {
        "ipConfigurations": "[if(variables('createPublicIPAddress'), variables('nicIpConfigurationWithPublicIP'), variables('nicIpConfigurationWithoutPublicIP'))]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
      }
    },
    {
      "name": "[variables('serverMachineName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-07-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces/', variables('serverNICName'))]"
      ],
      "plan": "[if(empty(parameters('imageId')), variables('plan'), null())]",
      "properties": {
        "hardwareProfile": {
          "VmSize": "[parameters('instanceType')]"
        },
        "storageProfile": {
          "imageReference": "[if(empty(parameters('imageId')), variables('imageReference'), variables('imageResourceID'))]",
          "osDisk": {
            "createOption": "fromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "osProfile": {
          "computerName": "[variables('serverMachineName')]",
          "adminUsername": "[variables('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces/', variables('serverNICName'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": false
          }
        }
      }
    },
    {
      "name": "[concat(variables('serverMachineName'), '/Installation')]",
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2024-07-01",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', variables('serverMachineName'))]"
      ],
      "properties": {
        "publisher": "Microsoft.Azure.Extensions",
        "type": "CustomScript",
        "typeHandlerVersion": "2.1",
        "autoUpgradeMinorVersion": true,
        "protectedSettings": {
          "commandToExecute": "[if(variables('createPublicIPAddress'), concat(variables('setupCommand'), ' ', reference(variables('serverIPName')).dnsSettings.fqdn),concat(variables('setupCommand'), ' ', reference(variables('serverNICName')).ipConfigurations[0].properties.privateIPAddress))]"
        }
      }
    },
    {
      "name": "nlm-azure-linux-deployment",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2024-07-01",
      "properties": {
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "resources": []
        }
      }
    }
  ],
  "outputs": {
    "NetworkLicenseManagerAddress": {
      "value": "[if(variables('createPublicIPAddress'), concat('https://', reference(variables('serverIPName')).dnsSettings.fqdn), concat('https://', reference(variables('serverNICName')).ipConfigurations[0].properties.privateIPAddress))]",
      "type": "string"
    }
  }
}
